# ecourt_gather

./: .env.example  .gitignore  gather_data.py  main.py  pyproject.toml  requirements.txt
config/: config.py  logger.py
database/: database.py  models.py
repo/: documents.py  update_status.py
services/: documents.py
utils/: file_hashing.py
